assert-struct/tests/snapshots/index_operations__index_value_mismatch.snap
---
source: assert-struct/tests/index_operations.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/index_operations_errors/index_value_mismatch.rs:15:20
   |
15 |         values[1]: 25,  // Should be 20, will fail
   |                    ^^ got 20
